@@ -20,20 +20,17 @@ package org.mabb.fontverter;
 import org.apache.commons.io.FileUtils;
 import org.mabb.fontverter.converter.FontConverter;
 import org.reflections.Reflections;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import java.io.File;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import java.util.Set;
 
 public class FontVerter {
-    private static Logger log = LoggerFactory.getLogger(FontVerter.class);
-    private static List<Class> adapters;
+
+	private static List<Class<? extends FVFont>> adapters;
     private static final Object adapterLock = new Object();
 
     public enum FontFormat {
@@ -107,7 +104,6 @@ public class FontVerter {
         // if nothing can read go at it again and use the first one to throw an exception
         // as the exception message for debugging.
         for (Class<? extends FVFont> adapterOn : adapters) {
-
             try {
                 FVFont adapter = parseFont(fontData, adapterOn);
                 if (adapter != null)
@@ -128,8 +124,9 @@ public class FontVerter {
         }
     }
 
-    private static FVFont parseFont(byte[] fontData, Class<? extends FVFont> adapterOn) throws InstantiationException, IllegalAccessException, IOException {
-        FVFont adapter = adapterOn.newInstance();
+    private static FVFont parseFont(byte[] fontData, Class<? extends FVFont> adapterOn) throws InstantiationException, IllegalAccessException, IOException, IllegalArgumentException, InvocationTargetException, NoSuchMethodException, SecurityException {
+        FVFont adapter = adapterOn.getDeclaredConstructor().newInstance();
+        
         if (adapter.detectFormat(fontData)) {
             adapter.read(fontData);
             return adapter;
@@ -142,31 +139,32 @@ public class FontVerter {
         synchronized (adapterLock) {
             if (adapters == null) {
                 Reflections reflections = new Reflections("org.mabb.fontverter");
-                Set<Class<? extends FVFont>> adapterClasses = reflections.getSubTypesOf(FVFont.class);
-                Class[] adapterArr = adapterClasses.toArray(new Class[adapterClasses.size()]);
-                adapters = Arrays.asList(adapterArr);
+                adapters = new ArrayList<>(reflections.getSubTypesOf(FVFont.class));
 
-                // CFF always last to try
-                Class cffAdapter = null;
-                for (Class adapterOn : adapters) {
-                    if (adapterOn.getSimpleName().contains("CffFont"))
-                        cffAdapter = adapterOn;
+                int cffIndex = -1;
+                Class<? extends FVFont> cffAdapter = null;
+                
+                for (int i=0; i < adapters.size(); i++) {
+                    if (adapters.get(i).getSimpleName().contains("CffFont")) {
+                        cffAdapter = adapters.get(i);
+                        cffIndex = i;
+                        break;
+                    }
                 }
 
-                int cffIndex = adapters.indexOf(cffAdapter);
                 adapters.set(cffIndex, adapters.get(adapters.size() - 1));
                 adapters.set(adapters.size() - 1, cffAdapter);
-
-                adapters = removeAbstractClasses(adapters);
+                adapters = removeAbstractAdapters(adapters);
             }
         }
     }
 
-    private static List<Class> removeAbstractClasses(List<Class> classes) {
-        List<Class> filtered = new ArrayList<Class>();
-        for (Class adapterOn : classes) {
-            if (!Modifier.isAbstract(adapterOn.getModifiers()))
-                filtered.add(adapterOn);
+    private static List<Class<? extends FVFont>> removeAbstractAdapters(List<Class<? extends FVFont>> adapters) {
+        List<Class<? extends FVFont>> filtered = new ArrayList<>();
+        
+        for (Class<? extends FVFont> adapter : adapters) {
+            if (!Modifier.isAbstract(adapter.getModifiers()))
+                filtered.add(adapter);
         }
 
         return filtered;
